<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login">

        <TextView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/VIDEO"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/streaming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STREAMING"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/video"
            app:layout_constraintTop_toBottomOf="@id/video" />

        <TextView
            android:id="@+id/from_sik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FROM_SIK"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/video"
            app:layout_constraintTop_toBottomOf="@id/streaming" />

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/seventy_percent_white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/video"
            tools:text="Версия 1.0 (1000)" />

        <ImageView
            android:id="@+id/arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/CONTENT_DESCRIPTION_ARROW_DOWN_ICON"
            android:src="@drawable/ic_pointer"
            app:layout_constraintBottom_toTopOf="@id/scan_qr_button"
            app:layout_constraintEnd_toEndOf="@+id/scan_qr_button"
            app:layout_constraintStart_toStartOf="@+id/scan_qr_button" />

        <TextView
            android:id="@+id/start_streaming_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/START_STREAM_HINT"
            android:textAllCaps="true"
            android:textColor="@color/sik_stream_dark_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/arrow_down"
            app:layout_constraintEnd_toEndOf="@+id/arrow_down"
            app:layout_constraintStart_toStartOf="@+id/arrow_down" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scan_qr_button"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rounded_button"
            android:ellipsize="end"
            android:paddingStart="48dp"
            android:paddingTop="16dp"
            android:paddingEnd="48dp"
            android:paddingBottom="16dp"
            android:text="@string/REGISTER_SCAN_QR_BUTTON"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>